// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creating index patterns from yaml fields createFieldFormatMap creates correct map based on inputs all variations and all the params get passed through: createFieldFormatMap 1`] = `
{
  "fieldPattern": {
    "params": {
      "pattern": "patternVal"
    }
  },
  "fieldFormat": {
    "id": "formatVal"
  },
  "fieldFormatWithParam": {
    "id": "formatVal",
    "params": {
      "outputPrecision": 2
    }
  },
  "fieldFormatAndPattern": {
    "id": "formatVal",
    "params": {
      "pattern": "patternVal"
    }
  },
  "fieldFormatAndAllParams": {
    "id": "formatVal",
    "params": {
      "pattern": "pattenVal",
      "inputFormat": "inputFormatVal",
      "outputFormat": "outputFormalVal",
      "outputPrecision": 3,
      "labelTemplate": "labelTemplateVal"
    }
  }
}
`;

exports[`creating index patterns from yaml fields dedupFields function remove duplicated fields when parsing multiple files: dedupeFields 1`] = `
[
  {
    "name": "@timestamp",
    "level": "core",
    "required": true,
    "type": "date",
    "description": "Date/time when the event originated. This is the date/time extracted from the event, typically representing when the event was generated by the source. If the event source has no original timestamp, this value is typically populated by the first time the event was received by the pipeline. Required field for all events.",
    "example": "2016-05-23T08:05:34.853Z"
  },
  {
    "name": "labels",
    "level": "core",
    "type": "object",
    "object_type": "keyword",
    "description": "Custom key/value pairs. Can be used to add meta information to events. Should not contain nested objects. All values are stored as keyword. Example: \`docker\` and \`k8s\` labels.",
    "example": {
      "application": "foo-bar",
      "env": "production"
    }
  },
  {
    "name": "message",
    "level": "core",
    "type": "text",
    "description": "For log events the message field contains the log message, optimized for viewing in a log viewer. For structured logs without an original message field, other fields can be concatenated to form a human-readable summary of the event. If multiple messages exist, they can be combined into one message.",
    "example": "Hello World"
  },
  {
    "name": "tags",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "List of keywords used to tag each event.",
    "example": "[\\"production\\", \\"env2\\"]"
  },
  {
    "name": "agent",
    "title": "Agent",
    "group": 2,
    "description": "The agent fields contain the data about the software entity, if any, that collects, detects, or observes events on a host, or takes measurements on a host. Examples include Beats. Agents may also run on observers. ECS agent.* fields shall be populated with details of the agent running on the host or observer where the event happened or the measurement was taken.",
    "footnote": "Examples: In the case of Beats for logs, the agent.name is filebeat. For APM, it is the agent running in the app/service. The agent information does not change if data is sent through queuing systems like Kafka, Redis, or processing systems such as Logstash or APM Server.",
    "type": "group",
    "fields": [
      {
        "name": "ephemeral_id",
        "level": "extended",
        "type": "keyword",
        "ignore_above": 1024,
        "description": "Ephemeral identifier of this agent (if one exists). This id normally changes across restarts, but \`agent.id\` does not.",
        "example": "8a4f500f"
      },
      {
        "name": "id",
        "level": "core",
        "type": "keyword",
        "ignore_above": 1024,
        "description": "Unique identifier of this agent (if one exists). Example: For Beats this would be beat.id.",
        "example": "8a4f500d"
      },
      {
        "name": "name",
        "level": "core",
        "type": "keyword",
        "ignore_above": 1024,
        "description": "Custom name of the agent. This is a name that can be given to an agent. This can be helpful if for example two Filebeat instances are running on the same host but a human readable separation is needed on which Filebeat instance data is coming from. If no name is given, the name is often left empty.",
        "example": "foo"
      },
      {
        "name": "type",
        "level": "core",
        "type": "keyword",
        "ignore_above": 1024,
        "description": "Type of the agent. The agent type stays always the same and should be given by the agent used. In case of Filebeat the agent would always be Filebeat also if two Filebeat instances are run on the same machine.",
        "example": "filebeat"
      },
      {
        "name": "version",
        "level": "core",
        "type": "keyword",
        "ignore_above": 1024,
        "description": "Version of the agent.",
        "example": "6.0.0-rc2"
      }
    ]
  },
  {
    "name": "as",
    "title": "Autonomous System",
    "group": 2,
    "description": "An autonomous system (AS) is a collection of connected Internet Protocol (IP) routing prefixes under the control of one or more network operators on behalf of a single administrative entity or domain that presents a common, clearly defined routing policy to the internet.",
    "type": "group",
    "fields": [
      {
        "name": "number",
        "level": "extended",
        "type": "long",
        "description": "Unique number allocated to the autonomous system. The autonomous system number (ASN) uniquely identifies each network on the Internet.",
        "example": 15169
      },
      {
        "name": "organization.name",
        "level": "extended",
        "type": "keyword",
        "ignore_above": 1024,
        "description": "Organization name.",
        "example": "Google LLC"
      }
    ]
  },
  {
    "name": "nginx.access",
    "type": "group",
    "description": "Contains fields for the Nginx access logs.\\n",
    "fields": [
      {
        "name": "group_disabled",
        "type": "group",
        "enabled": false,
        "fields": [
          {
            "name": "message",
            "type": "text"
          }
        ]
      },
      {
        "name": "remote_ip_list",
        "type": "array",
        "description": "An array of remote IP addresses. It is a list because it is common to include, besides the client IP address, IP addresses from headers like \`X-Forwarded-For\`. Real source IP is restored to \`source.ip\`.\\n"
      },
      {
        "name": "body_sent.bytes",
        "type": "alias",
        "path": "http.response.body.bytes",
        "migration": true
      },
      {
        "name": "user_name",
        "type": "alias",
        "path": "user.name",
        "migration": true
      },
      {
        "name": "method",
        "type": "alias",
        "path": "http.request.method",
        "migration": true
      },
      {
        "name": "url",
        "type": "alias",
        "path": "url.original",
        "migration": true
      },
      {
        "name": "http_version",
        "type": "alias",
        "path": "http.version",
        "migration": true
      },
      {
        "name": "response_code",
        "type": "alias",
        "path": "http.response.status_code",
        "migration": true
      },
      {
        "name": "referrer",
        "type": "alias",
        "path": "http.request.referrer",
        "migration": true
      },
      {
        "name": "agent",
        "type": "alias",
        "path": "user_agent.original",
        "migration": true
      },
      {
        "name": "user_agent",
        "type": "group",
        "fields": [
          {
            "name": "device",
            "type": "alias",
            "path": "user_agent.device.name",
            "migration": true
          },
          {
            "name": "name",
            "type": "alias",
            "path": "user_agent.name",
            "migration": true
          },
          {
            "name": "os",
            "type": "alias",
            "path": "user_agent.os.full_name",
            "migration": true
          },
          {
            "name": "os_name",
            "type": "alias",
            "path": "user_agent.os.name",
            "migration": true
          },
          {
            "name": "original",
            "type": "alias",
            "path": "user_agent.original",
            "migration": true
          }
        ]
      },
      {
        "name": "geoip",
        "type": "group",
        "fields": [
          {
            "name": "continent_name",
            "type": "alias",
            "path": "source.geo.continent_name",
            "migration": true
          },
          {
            "name": "country_iso_code",
            "type": "alias",
            "path": "source.geo.country_iso_code",
            "migration": true
          },
          {
            "name": "location",
            "type": "alias",
            "path": "source.geo.location",
            "migration": true
          },
          {
            "name": "region_name",
            "type": "alias",
            "path": "source.geo.region_name",
            "migration": true
          },
          {
            "name": "city_name",
            "type": "alias",
            "path": "source.geo.city_name",
            "migration": true
          },
          {
            "name": "region_iso_code",
            "type": "alias",
            "path": "source.geo.region_iso_code",
            "migration": true
          }
        ]
      }
    ]
  },
  {
    "name": "source",
    "type": "group",
    "fields": [
      {
        "name": "geo",
        "type": "group",
        "fields": [
          {
            "name": "continent_name",
            "type": "text"
          }
        ]
      }
    ]
  },
  {
    "name": "country",
    "type": "",
    "multi_fields": [
      {
        "name": "keyword",
        "type": "keyword"
      },
      {
        "name": "text",
        "type": "text"
      }
    ]
  }
]
`;

exports[`creating index patterns from yaml fields flattenFields function flattens recursively and handles copying alias fields: flattenFields 1`] = `
[
  {
    "name": "@timestamp",
    "level": "core",
    "required": true,
    "type": "date",
    "description": "Date/time when the event originated. This is the date/time extracted from the event, typically representing when the event was generated by the source. If the event source has no original timestamp, this value is typically populated by the first time the event was received by the pipeline. Required field for all events.",
    "example": "2016-05-23T08:05:34.853Z"
  },
  {
    "name": "labels",
    "level": "core",
    "type": "object",
    "object_type": "keyword",
    "description": "Custom key/value pairs. Can be used to add meta information to events. Should not contain nested objects. All values are stored as keyword. Example: \`docker\` and \`k8s\` labels.",
    "example": {
      "application": "foo-bar",
      "env": "production"
    }
  },
  {
    "name": "message",
    "level": "core",
    "type": "text",
    "description": "For log events the message field contains the log message, optimized for viewing in a log viewer. For structured logs without an original message field, other fields can be concatenated to form a human-readable summary of the event. If multiple messages exist, they can be combined into one message.",
    "example": "Hello World"
  },
  {
    "name": "tags",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "List of keywords used to tag each event.",
    "example": "[\\"production\\", \\"env2\\"]"
  },
  {
    "name": "agent.ephemeral_id",
    "level": "extended",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Ephemeral identifier of this agent (if one exists). This id normally changes across restarts, but \`agent.id\` does not.",
    "example": "8a4f500f"
  },
  {
    "name": "agent.id",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Unique identifier of this agent (if one exists). Example: For Beats this would be beat.id.",
    "example": "8a4f500d"
  },
  {
    "name": "agent.name",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Custom name of the agent. This is a name that can be given to an agent. This can be helpful if for example two Filebeat instances are running on the same host but a human readable separation is needed on which Filebeat instance data is coming from. If no name is given, the name is often left empty.",
    "example": "foo"
  },
  {
    "name": "agent.type",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Type of the agent. The agent type stays always the same and should be given by the agent used. In case of Filebeat the agent would always be Filebeat also if two Filebeat instances are run on the same machine.",
    "example": "filebeat"
  },
  {
    "name": "agent.version",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Version of the agent.",
    "example": "6.0.0-rc2"
  },
  {
    "name": "as.number",
    "level": "extended",
    "type": "long",
    "description": "Unique number allocated to the autonomous system. The autonomous system number (ASN) uniquely identifies each network on the Internet.",
    "example": 15169
  },
  {
    "name": "as.organization.name",
    "level": "extended",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Organization name.",
    "example": "Google LLC"
  },
  {
    "name": "@timestamp",
    "level": "core",
    "required": true,
    "type": "date",
    "description": "Date/time when the event originated. This is the date/time extracted from the event, typically representing when the event was generated by the source. If the event source has no original timestamp, this value is typically populated by the first time the event was received by the pipeline. Required field for all events.",
    "example": "2016-05-23T08:05:34.853Z"
  },
  {
    "name": "labels",
    "level": "core",
    "type": "object",
    "object_type": "keyword",
    "description": "Custom key/value pairs. Can be used to add meta information to events. Should not contain nested objects. All values are stored as keyword. Example: \`docker\` and \`k8s\` labels.",
    "example": {
      "application": "foo-bar",
      "env": "production"
    }
  },
  {
    "name": "message",
    "level": "core",
    "type": "text",
    "description": "For log events the message field contains the log message, optimized for viewing in a log viewer. For structured logs without an original message field, other fields can be concatenated to form a human-readable summary of the event. If multiple messages exist, they can be combined into one message.",
    "example": "Hello World"
  },
  {
    "name": "tags",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "List of keywords used to tag each event.",
    "example": "[\\"production\\", \\"env2\\"]"
  },
  {
    "name": "agent.ephemeral_id",
    "level": "extended",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Ephemeral identifier of this agent (if one exists). This id normally changes across restarts, but \`agent.id\` does not.",
    "example": "8a4f500f"
  },
  {
    "name": "agent.id",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Unique identifier of this agent (if one exists). Example: For Beats this would be beat.id.",
    "example": "8a4f500d"
  },
  {
    "name": "agent.name",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Custom name of the agent. This is a name that can be given to an agent. This can be helpful if for example two Filebeat instances are running on the same host but a human readable separation is needed on which Filebeat instance data is coming from. If no name is given, the name is often left empty.",
    "example": "foo"
  },
  {
    "name": "agent.type",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Type of the agent. The agent type stays always the same and should be given by the agent used. In case of Filebeat the agent would always be Filebeat also if two Filebeat instances are run on the same machine.",
    "example": "filebeat"
  },
  {
    "name": "agent.version",
    "level": "core",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Version of the agent.",
    "example": "6.0.0-rc2"
  },
  {
    "name": "as.number",
    "level": "extended",
    "type": "long",
    "description": "Unique number allocated to the autonomous system. The autonomous system number (ASN) uniquely identifies each network on the Internet.",
    "example": 15169
  },
  {
    "name": "as.organization.name",
    "level": "extended",
    "type": "keyword",
    "ignore_above": 1024,
    "description": "Organization name.",
    "example": "Google LLC"
  },
  {
    "name": "nginx.access.remote_ip_list",
    "type": "array",
    "description": "An array of remote IP addresses. It is a list because it is common to include, besides the client IP address, IP addresses from headers like \`X-Forwarded-For\`. Real source IP is restored to \`source.ip\`.\\n"
  },
  {
    "name": "nginx.access.body_sent.bytes",
    "type": "alias",
    "path": "http.response.body.bytes",
    "migration": true
  },
  {
    "name": "nginx.access.user_name",
    "type": "alias",
    "path": "user.name",
    "migration": true
  },
  {
    "name": "nginx.access.method",
    "type": "alias",
    "path": "http.request.method",
    "migration": true
  },
  {
    "name": "nginx.access.url",
    "type": "alias",
    "path": "url.original",
    "migration": true
  },
  {
    "name": "nginx.access.http_version",
    "type": "alias",
    "path": "http.version",
    "migration": true
  },
  {
    "name": "nginx.access.response_code",
    "type": "alias",
    "path": "http.response.status_code",
    "migration": true
  },
  {
    "name": "nginx.access.referrer",
    "type": "alias",
    "path": "http.request.referrer",
    "migration": true
  },
  {
    "name": "nginx.access.agent",
    "type": "alias",
    "path": "user_agent.original",
    "migration": true
  },
  {
    "name": "nginx.access.user_agent.device",
    "type": "alias",
    "path": "user_agent.device.name",
    "migration": true
  },
  {
    "name": "nginx.access.user_agent.name",
    "type": "alias",
    "path": "user_agent.name",
    "migration": true
  },
  {
    "name": "nginx.access.user_agent.os",
    "type": "alias",
    "path": "user_agent.os.full_name",
    "migration": true
  },
  {
    "name": "nginx.access.user_agent.os_name",
    "type": "alias",
    "path": "user_agent.os.name",
    "migration": true
  },
  {
    "name": "nginx.access.user_agent.original",
    "type": "alias",
    "path": "user_agent.original",
    "migration": true
  },
  {
    "name": "nginx.access.geoip.continent_name",
    "type": "text",
    "path": "source.geo.continent_name"
  },
  {
    "name": "nginx.access.geoip.country_iso_code",
    "type": "alias",
    "path": "source.geo.country_iso_code",
    "migration": true
  },
  {
    "name": "nginx.access.geoip.location",
    "type": "alias",
    "path": "source.geo.location",
    "migration": true
  },
  {
    "name": "nginx.access.geoip.region_name",
    "type": "alias",
    "path": "source.geo.region_name",
    "migration": true
  },
  {
    "name": "nginx.access.geoip.city_name",
    "type": "alias",
    "path": "source.geo.city_name",
    "migration": true
  },
  {
    "name": "nginx.access.geoip.region_iso_code",
    "type": "alias",
    "path": "source.geo.region_iso_code",
    "migration": true
  },
  {
    "name": "source.geo.continent_name",
    "type": "text"
  },
  {
    "name": "country",
    "type": "",
    "multi_fields": [
      {
        "name": "keyword",
        "type": "keyword"
      },
      {
        "name": "text",
        "type": "text"
      }
    ]
  },
  {
    "name": "country.keyword",
    "type": "keyword"
  },
  {
    "name": "country.text",
    "type": "text"
  }
]
`;
